# dropbox-sisop2

./: .gitignore  CMakeLists.txt  LICENSE  config.txt
backup/: config.txt
client-socket/: front-end.c  front-end.h  test-client.c  test-client.h
event-handler/: event-handler.c  event-handler.h
file-control/: file-handler.c  file-handler.h
lib/: helper.c  helper.h  utlist.h
server/: server.c  server.h  server_functions.c  server_functions.h  server_globals.h  user.c  user.h
server/replica-manager/: replica-manager.c  replica-manager.h
testsync/: config.txt
watch/: config.txt
